<resources>
    <string name="app_name">Adopta Un Amigo</string>
    <string name="txtFacebook">Acceder</string>
    <string name="facebook_app_id">460859368004892</string>
    <string name="fb_login_protocol_scheme">fb460859368004892</string>
    <string name="btn_ingresar">INGRESAR</string>
    <string name="txt_registro">¿No tienes una cuenta? REGISTRATE</string>
    <string name="titulo_registro">REGISTRO</string>
    <string name="btn_registrar">CREAR CUENTA</string>
    <string name="titulo_inicio">INICIO</string>
    <string name="txt_subtitulo">desoft@gmail.com</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_publicaciones">Publicaciones</string>
    <string name="menu_compartir">Compartir</string>
    <string name="menu_acerca">Acerca de</string>
    <string name="menu_salir">Salir</string>
    <string name="titulo_detalle">DETALLES</string>
    <string name="titulo_item_info">Informacion</string>
    <string name="titulo_item_contacto">Contacto</string>


    <string name="titulo_perfil">PERFIL</string>
    <string name="btn_guardar">GUARDAR</string>

    <string name="titulo_anade">AÑADIR</string>
    <string name="btn_adopcion">DAR EN ADOPCION</string>
    <string name="btn_refugio">BUSCA REFUGIO</string>
    <string name="titulo_adopcion">DAR EN ADOPCION</string>
    <string name="btn_agregar_imagen">AGREGAR IMAGEN</string>
    <string name="btn_publicar">PUBLICAR</string>
    <string name="titulo_refugio">BUSCA REFUGIO</string>

    <string name="txt_acerca_contenido">Si eres un persona o fundacion sin animo de lucro "Adopta un Amigo" te permite buscar o dar en adopción una mascota. Ademas permite publicar imagenes de animales en situacion de calle o abandono para dar a conocer los casos a las fundación o albergue.</string>
    <string name="txt_version">Version 0.0.1</string>
    <string name="txt_footer">DeSoft © Todos los derechos reservados</string>






    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Perfil</string>
    <string name="menu_slideshow">Publicaciones</string>
    <string name="menu_tools">Acerca de</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

<resources>
<string name="app_name">Adopta Un Amigo</string>
<string name="txtFacebook">Acceder</string>
<string name="facebook_app_id">460859368004892</string>
<string name="fb_login_protocol_scheme">fb460859368004892</string>
<string name="btn_ingresar">INGRESAR</string>
<string name="txt_registro">¿No tienes una cuenta? REGISTRATE</string>
<string name="titulo_registro">REGISTRO</string>
<string name="btn_registrar">CREAR CUENTA</string>
<string name="titulo_inicio">INICIO</string>
<string name="txt_subtitulo">desoft@gmail.com</string>
<string name="menu_inicio">Inicio</string>
<string name="menu_perfil">Perfil</string>
<string name="menu_publicaciones">Publicaciones</string>
<string name="menu_compartir">Compartir</string>
<string name="menu_acerca">Acerca de</string>
<string name="menu_salir">Salir</string>
<string name="titulo_detalle">DETALLES</string>
<string name="titulo_item_info">Informacion</string>
<string name="titulo_item_contacto">Contacto</string>


<string name="titulo_perfil">PERFIL</string>
<string name="btn_guardar">GUARDAR</string>

<string name="titulo_anade">AÑADIR</string>
<string name="btn_adopcion">DAR EN ADOPCION</string>
<string name="btn_refugio">BUSCA REFUGIO</string>
<string name="titulo_adopcion">DAR EN ADOPCION</string>
<string name="btn_agregar_imagen">AGREGAR IMAGEN</string>
<string name="btn_publicar">PUBLICAR</string>
<string name="titulo_refugio">BUSCA REFUGIO</string>


<string name="navigation_drawer_open">Open navigation drawer</string>
<string name="navigation_drawer_close">Close navigation drawer</string>


<string name="txt_acerca_contenido">Si eres un persona o fundacion sin animo de lucro "Adopta un Amigo" te permite buscar o dar en adopción una mascota. Ademas permite publicar imagenes de animales en situacion de calle o abandono para dar a conocer los casos a las fundación o albergue.</string>
<string name="txt_version">Version 0.0.1</string>
<string name="txt_footer">DeSoft © Todos los derechos reservados</string>

<!-- TODO: Remove or change this placeholder text -->
<string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

