<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/inicio"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/perfil"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_publicaciones"
            android:icon="@drawable/publica"
            android:title="@string/menu_publicaciones" />
        <item
            android:id="@+id/nav_acerca"
            android:icon="@drawable/info"
            android:title="@string/menu_acerca" />
        <item
            android:id="@+id/nav_compartir"
            android:icon="@drawable/compartir"
            android:title="@string/menu_compartir" />
        <item
            android:id="@+id/nav_salir"
            android:icon="@drawable/salir"
            android:title="@string/menu_salir" />
    </group>
</menu>