<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpcionActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:logo="@drawable/back"
        app:popupTheme="@style/AppTheme"
        app:title="@string/titulo_anade"
        app:titleTextColor="@color/icons"/>

    <Button
        android:id="@+id/btnAdopcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="83sp"
        android:layout_marginRight="20sp"
        android:background="@color/colorPrimaryLight"
        android:drawableTop="@drawable/adopcion"
        android:paddingTop="25sp"
        android:paddingBottom="20sp"
        android:text="@string/btn_adopcion"
        android:textColor="@color/colorPrimaryText"
        android:textSize="30sp"
        android:onClick="adopcion"/>

    <Button
        android:id="@+id/btnRefugio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="33sp"
        android:background="@color/colorPrimaryLight"
        android:drawableTop="@drawable/refugio"
        android:paddingTop="30sp"
        android:paddingBottom="25sp"
        android:text="@string/btn_refugio"
        android:textColor="@color/colorPrimaryText"
        android:textSize="30sp"
        android:onClick="refugio"/>
</RelativeLayout>