<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicioSesionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="25sp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150sp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/pet" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25sp"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="120sp"
                android:layout_height="50sp"
                android:layout_marginRight="10sp"/>

            <com.facebook.login.widget.LoginButton
                xmlns:fb="http://schemas.android.com/apk/res-auto"
                android:id="@+id/login_button"
                android:layout_width="120sp"
                android:layout_height="50sp"
                android:padding="10sp"
                android:layout_gravity="center_horizontal"
                fb:com_facebook_login_text="@string/txtFacebook"
                android:textSize="14sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="25sp"
            android:background="@color/divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginTop="25sp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Correo electronico"
                    android:inputType="text"
                    android:text="desoft@gmail.com"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtContraseña"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Contrasena"
                    android:inputType="textPassword"
                    android:text="lizeth.20"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnIngreso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25sp"
                android:background="@color/colorPrimaryDark"
                android:drawableRight="@drawable/send"
                android:paddingLeft="10sp"
                android:paddingRight="5sp"
                android:text="@string/btn_ingresar"
                android:textColor="@color/icons"
                android:onClick="ingresar"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/btnRegistrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25sp"
        android:onClick="registro"
        android:text="@string/txt_registro"
        android:textStyle="bold" />
</RelativeLayout>