<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RefugioActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:logo="@drawable/back"
        app:popupTheme="@style/AppTheme"
        app:title="@string/titulo_refugio"
        app:titleTextColor="@color/icons"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:layout_marginTop="30sp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Tipo de Animal *" />

                    <Spinner
                        android:id="@+id/txtTipoAnimal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtAlias"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Alias *"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Genero *" />

                    <Spinner
                        android:id="@+id/txtGenero"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Tamaño *" />

                    <Spinner
                        android:id="@+id/txtTamaño"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Color *" />

                    <Spinner
                        android:id="@+id/txtColor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Ubicacion *" />

                    <Spinner
                        android:id="@+id/txtUbicacion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtDescripcion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Descripcion *"
                        android:inputType="textMultiLine" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <Button
                android:id="@+id/btnAgregar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30sp"
                android:background="@color/colorPrimaryDark"
                android:drawableRight="@drawable/foto"
                android:paddingLeft="10sp"
                android:paddingRight="5sp"
                android:text="@string/btn_agregar_imagen"
                android:textColor="@color/icons"/>

            <Button
                android:id="@+id/btnPublicar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30sp"
                android:layout_marginBottom="30sp"
                android:background="@color/colorPrimaryDark"
                android:drawableRight="@drawable/send"
                android:paddingLeft="10sp"
                android:paddingRight="5sp"
                android:text="@string/btn_publicar"
                android:textColor="@color/icons"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>